--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy via SCP
+      - name: Deploy via SCP to CWP (Custom Port)
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key
           chmod 600 private_key
           scp -P 22527 -i private_key -o StrictHostKeyChecking=no -r ./out/ svnuniq@101.53.144.53:/home/svnuniq/public_html/
-
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
