--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy via SCP to CWP (Custom Port)
+      - name: Test SSH Connection (Debug)
+        run: |
+          echo "$SSH_PRIVATE_KEY" > private_key
+          chmod 600 private_key
+          ssh -p 22527 -i private_key -o StrictHostKeyChecking=no svnuniq@101.53.144.53 "echo ✅ SSH Connected Successfully"
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Deploy via SCP
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key
           chmod 600 private_key
