--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build and Export Project
         run: |
           npm run build
           npm run export
-        # Ensure this creates the `out/` directory
 
       - name: Test SSH Connection (Debug)
         run: |
