--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,8 @@ jobs:
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
 
-      - name: Build and Export Project
-        run: |
-          npm run build
-          npm run export
+      - name: Build Static Project
+        run: npm run build
 
       - name: Test SSH Connection (Debug)
         run: |
