--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,8 @@ jobs:
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key
           chmod 600 private_key
-          scp -P 22527 -i private_key -o StrictHostKeyChecking=no -r ./out/ svnuniq@101.53.144.53:/home/svnuniq/public_html/
+          ssh -p 22527 -i private_key -o StrictHostKeyChecking=no svnuniq@101.53.144.53 "rm -rf /home/svnuniq/public_html/*"
+          scp -P 22527 -i private_key -o StrictHostKeyChecking=no -r ./out/* svnuniq@101.53.144.53:/home/svnuniq/public_html/
           rm -f private_key
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
